--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         }
 
     </style>
-</head>
+    </head>
 <body>
 <form id="register-form">
     <div class="relative flex min-h-40 flex col justify-center overflow-hidden py-10 bg-gray-50">
@@ -28,7 +28,7 @@
 <div class="relative bg-white px-6 pt-5 pb-5 shadow-xl ring-1 ring-gray-900/5 sm:mx-w-lg  sm:rounded-lg sm:px-10">
     <div class="mx-auto max-w-md">
 
-    <h2 class="text-2xl text-center font-bold leading-tight">Registration <form action=""></form>
+    <h2 class="text-xl text-center font-bold leading-tight">Registration <form action=""></form>
     </h2>
     <div class="divide-y divide-gray-317/45">
     <div class="space-y-5 py-7 text-base leading 7 text-gray-601">
